fix: text shoulkd wrap

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,7 +5,4 @@
 
   /* Add here your own styles only for this widget */
 
-  .text-muted {
-    word-break: break-all;
-  }
 }
